--- a/Airplace2025/packages.config
+++ b/Airplace2025/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Guna.UI2.WinForms" version="2.0.4.7" targetFramework="net472" />
   <package id="Microsoft.Web.WebView2" version="1.0.3537.50" targetFramework="net472" />
 </packages>
