Thêm chức năng tìm kiếm chuyến bay trong form đặt vé, bao gồm việc tải danh sách sân bay và hạng vé từ cơ sở dữ liệu. Cập nhật giao diện người dùng với các điều khiển mới và cải thiện khả năng sử dụng.

--- a/Airplace2025/Airplace2025.csproj
+++ b/Airplace2025/Airplace2025.csproj
@@ -69,8 +69,12 @@
   <ItemGroup>
     <Compile Include="BLL\DAO\FlightDAO.cs" />
     <Compile Include="BLL\FlightDetail.cs" />
+    <Compile Include="BLL\ChuyenBayBLL.cs" />
+    <Compile Include="BLL\DTO\ChuyenBayDTO.cs" />
+    <Compile Include="BLL\DTO\SearchFlightParams.cs" />
     <Compile Include="Controls\TimelineNodeType.cs" />
     <Compile Include="DAL\DBConnection.cs" />
+    <Compile Include="DAL\ChuyenBayDAO.cs" />
     <Compile Include="Controls\FlightLegControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
