Thêm chức năng quản lý hạng vé trong form đặt vé, bao gồm việc cập nhật danh sách hạng vé từ cơ sở dữ liệu và cải thiện giao diện người dùng để hiển thị thông tin hạng vé. Cập nhật các phương thức xử lý giá vé dựa trên hạng và thêm các phương thức lấy thông tin hạng vé đã chọn.

--- a/Airplace2025/Airplace2025.csproj
+++ b/Airplace2025/Airplace2025.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BLL\DAO\FlightDAO.cs" />
+    <Compile Include="BLL\DTO\HangVeDTO.cs" />
     <Compile Include="BLL\FlightDetail.cs" />
     <Compile Include="BLL\ChuyenBayBLL.cs" />
     <Compile Include="BLL\DTO\ChuyenBayDTO.cs" />
