Thêm chức năng quản lý khách hàng và lựa chọn ghế trong form đặt vé. Cập nhật các tệp dự án để bao gồm các lớp DTO và DAO mới cho khách hàng, cùng với việc cải thiện giao diện người dùng. Tối ưu hóa quy trình tìm kiếm khách hàng với khả năng tự động phát hiện loại tìm kiếm và thêm chức năng cập nhật trạng thái nút thêm hành khách dựa trên lựa chọn chuyến bay.

--- a/Airplace2025/Airplace2025.csproj
+++ b/Airplace2025/Airplace2025.csproj
@@ -69,13 +69,16 @@
   <ItemGroup>
     <Compile Include="BLL\DAO\FlightDAO.cs" />
     <Compile Include="BLL\DTO\HangVeDTO.cs" />
+    <Compile Include="BLL\DTO\KhachHangDTO.cs" />
     <Compile Include="BLL\FlightDetail.cs" />
     <Compile Include="BLL\ChuyenBayBLL.cs" />
+    <Compile Include="BLL\KhachHangBLL.cs" />
     <Compile Include="BLL\DTO\ChuyenBayDTO.cs" />
     <Compile Include="BLL\DTO\SearchFlightParams.cs" />
     <Compile Include="Controls\TimelineNodeType.cs" />
     <Compile Include="DAL\DBConnection.cs" />
     <Compile Include="DAL\ChuyenBayDAO.cs" />
+    <Compile Include="DAL\KhachHangDAO.cs" />
     <Compile Include="Controls\FlightLegControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -87,6 +90,12 @@
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmChonKhachHang.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmChonKhachHang.Designer.cs">
+      <DependentUpon>frmChonKhachHang.cs</DependentUpon>
     </Compile>
     <Compile Include="frmPassengerDetails.cs">
       <SubType>Form</SubType>
@@ -138,8 +147,14 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmChonKhachHang.resx">
+      <DependentUpon>frmChonKhachHang.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmPassengerDetails.resx">
       <DependentUpon>frmPassengerDetails.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSeatSelection.resx">
+      <DependentUpon>frmSeatSelection.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmTimKiemKhachHang.resx">
       <DependentUpon>frmTimKiemKhachHang.cs</DependentUpon>
