--- a/Airplace2025/Airplace2025.csproj
+++ b/Airplace2025/Airplace2025.csproj
@@ -67,6 +67,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BLL\DAO\StopDAO.cs" />
+    <Compile Include="BLL\DAO\ParameterDAO.cs" />
+    <Compile Include="BLL\DAO\AirplaneDAO.cs" />
+    <Compile Include="BLL\DAO\AirportDAO.cs" />
+    <Compile Include="BLL\DAO\ClassDAO.cs" />
+    <Compile Include="BLL\DAO\AirlineDAO.cs" />
     <Compile Include="BLL\DAO\FlightDAO.cs" />
     <Compile Include="BLL\DTO\HangVeDTO.cs" />
     <Compile Include="BLL\FlightDetail.cs" />
@@ -100,6 +106,12 @@
     <Compile Include="frmSeatSelection.Designer.cs">
       <DependentUpon>frmSeatSelection.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmThemTrungGian.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmThemTrungGian.Designer.cs">
+      <DependentUpon>frmThemTrungGian.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmTimKiemKhachHang.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -124,6 +136,12 @@
     <Compile Include="frmThongTinChuyenBay.Designer.cs">
       <DependentUpon>frmThongTinChuyenBay.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmLapLichChuyenBay.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmLapLichChuyenBay.Designer.cs">
+      <DependentUpon>frmLapLichChuyenBay.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controls\StopControl.cs">
@@ -141,6 +159,9 @@
     <EmbeddedResource Include="frmPassengerDetails.resx">
       <DependentUpon>frmPassengerDetails.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmThemTrungGian.resx">
+      <DependentUpon>frmThemTrungGian.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmTimKiemKhachHang.resx">
       <DependentUpon>frmTimKiemKhachHang.cs</DependentUpon>
     </EmbeddedResource>
@@ -152,6 +173,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmThongTinChuyenBay.resx">
       <DependentUpon>frmThongTinChuyenBay.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmLapLichChuyenBay.resx">
+      <DependentUpon>frmLapLichChuyenBay.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -185,6 +209,11 @@
     <Content Include="map.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="Resources\add-square.512x512.png" />
+    <None Include="Resources\noun-setting-8140887.png" />
+    <None Include="Resources\dustbin.png" />
+    <None Include="Resources\edit.png" />
+    <None Include="Resources\magnifying-glass.png" />
     <None Include="Resources\noun-entertainment-6988208.png" />
     <None Include="Resources\noun-plug-8109468.png" />
     <None Include="Resources\noun-meal-8091868.png" />
