Add frmSoLuongKhachHang form and integrate it into frmChonChuyenBay. Update UI elements for better user interaction, including new buttons and labels for customer management.

--- a/Airplace2025/Airplace2025.csproj
+++ b/Airplace2025/Airplace2025.csproj
@@ -125,6 +125,12 @@
     <Compile Include="frmSeatSelection.Designer.cs">
       <DependentUpon>frmSeatSelection.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmSoLuongKhachHang.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmSoLuongKhachHang.Designer.cs">
+      <DependentUpon>frmSoLuongKhachHang.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmThemTrungGian.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -183,6 +189,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmPassengerDetails.resx">
       <DependentUpon>frmPassengerDetails.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSoLuongKhachHang.resx">
+      <DependentUpon>frmSoLuongKhachHang.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmThemTrungGian.resx">
       <DependentUpon>frmThemTrungGian.cs</DependentUpon>
