Nâng cấp quản lý hành khách trong frmSoLuongKhachHang: Tối ưu hóa xử lý sự kiện nút bấm cho số lượng người lớn, trẻ em và em bé, đồng thời đồng bộ giao diện người dùng với trạng thái dùng chung. Cập nhật frmDatVe để thiết lập số lượng hành khách dựa trên dữ liệu người dùng nhập, và tích hợp PassengerSelectionState nhằm cải thiện việc quản lý dữ liệu.

--- a/Airplace2025/Airplace2025.csproj
+++ b/Airplace2025/Airplace2025.csproj
@@ -175,6 +175,7 @@
     <Compile Include="Controls\StopControl.Designer.cs">
       <DependentUpon>StopControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="State\PassengerSelectionState.cs" />
     <EmbeddedResource Include="Controls\FlightLegControl.resx">
       <DependentUpon>FlightLegControl.cs</DependentUpon>
     </EmbeddedResource>
