Cải tiến quản lý hành khách trong frmSoLuongKhachHang: - Tối ưu hóa xử lý sự kiện cho số lượng người lớn, trẻ em và em bé, đồng thời đồng bộ giao diện với trạng thái dùng chung. - Cập nhật frmDatVe để thiết lập số lượng hành khách dựa trên dữ liệu người dùng nhập, tích hợp PassengerSelectionStateTemp nhằm cải thiện việc quản lý dữ liệu. - Thêm các phương thức để xác thực và cập nhật ngày đi và ngày về, đảm bảo tính hợp lệ cho các lựa chọn sân bay.

--- a/Airplace2025/Airplace2025.csproj
+++ b/Airplace2025/Airplace2025.csproj
@@ -176,6 +176,7 @@
       <DependentUpon>StopControl.cs</DependentUpon>
     </Compile>
     <Compile Include="State\PassengerSelectionState.cs" />
+    <Compile Include="State\PassengerSelectionStateTemp.cs" />
     <EmbeddedResource Include="Controls\FlightLegControl.resx">
       <DependentUpon>FlightLegControl.cs</DependentUpon>
     </EmbeddedResource>
