Thêm hình ảnh slider vào tài nguyên và cập nhật giao diện frmChonChuyenBay: bổ sung panel cho bộ lọc chuyến bay, điều chỉnh vị trí các panel để cải thiện trải nghiệm người dùng.

--- a/Airplace2025/Airplace2025.csproj
+++ b/Airplace2025/Airplace2025.csproj
@@ -177,6 +177,7 @@
     </Compile>
     <Compile Include="State\PassengerSelectionState.cs" />
     <Compile Include="State\PassengerSelectionStateTemp.cs" />
+    <None Include="Resources\sliders-solid-full.png" />
     <EmbeddedResource Include="Controls\FlightLegControl.resx">
       <DependentUpon>FlightLegControl.cs</DependentUpon>
     </EmbeddedResource>
