Thêm FilterForm vào dự án và tích hợp chức năng lọc trong frmChonChuyenBay
Đã thêm FilterForm và các tệp thiết kế (designer) tương ứng vào dự án.

Đã triển khai sự kiện btnFilter_Click để mở FilterForm khi người dùng nhấn nút lọc.

Cập nhật thuộc tính của btnFilter để đồng nhất giao diện người dùng (UI) và cải thiện trải nghiệm.

--- a/Airplace2025/Airplace2025.csproj
+++ b/Airplace2025/Airplace2025.csproj
@@ -95,6 +95,12 @@
     <Compile Include="Controls\FlightLegControl.Designer.cs">
       <DependentUpon>FlightLegControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="FilterForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FilterForm.Designer.cs">
+      <DependentUpon>FilterForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -180,6 +186,9 @@
     <None Include="Resources\sliders-solid-full.png" />
     <EmbeddedResource Include="Controls\FlightLegControl.resx">
       <DependentUpon>FlightLegControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FilterForm.resx">
+      <DependentUpon>FilterForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
