--- a/Airplace2025/Airplace2025.csproj
+++ b/Airplace2025/Airplace2025.csproj
@@ -97,6 +97,18 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmAddAirline.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAddAirline.Designer.cs">
+      <DependentUpon>frmAddAirline.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmAddAirplane.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAddAirplane.Designer.cs">
+      <DependentUpon>frmAddAirplane.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmChonKhachHang.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -170,6 +182,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmAddAirline.resx">
+      <DependentUpon>frmAddAirline.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmAddAirplane.resx">
+      <DependentUpon>frmAddAirplane.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmChonKhachHang.resx">
       <DependentUpon>frmChonKhachHang.cs</DependentUpon>
