--- a/Airplace2025/Airplace2025.csproj
+++ b/Airplace2025/Airplace2025.csproj
@@ -191,6 +191,12 @@
     <Compile Include="frmLapLichChuyenBay.Designer.cs">
       <DependentUpon>frmLapLichChuyenBay.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmTrangChu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmTrangChu.Designer.cs">
+      <DependentUpon>frmTrangChu.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controls\StopControl.cs">
@@ -253,6 +259,9 @@
     <EmbeddedResource Include="frmLapLichChuyenBay.resx">
       <DependentUpon>frmLapLichChuyenBay.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmTrangChu.resx">
+      <DependentUpon>frmTrangChu.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
@@ -285,6 +294,7 @@
     <Content Include="map.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="Resources\mb11.png" />
     <None Include="Resources\pngaaa.com-791768.png" />
     <None Include="Resources\noun-backspace-8069349.png" />
     <None Include="Resources\noun-pen-6860043.png" />
