--- a/Airplace2025/Airplace2025.csproj
+++ b/Airplace2025/Airplace2025.csproj
@@ -71,6 +71,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BLL\DAO\AccountDAO.cs" />
     <Compile Include="BLL\DAO\StopDAO.cs" />
     <Compile Include="BLL\DAO\ParameterDAO.cs" />
     <Compile Include="BLL\DAO\AirplaneDAO.cs" />
@@ -130,6 +131,12 @@
     </Compile>
     <Compile Include="frmChonKhachHang.Designer.cs">
       <DependentUpon>frmChonKhachHang.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmDangNhap.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmDangNhap.Designer.cs">
+      <DependentUpon>frmDangNhap.cs</DependentUpon>
     </Compile>
     <Compile Include="frmMayBay.cs">
       <SubType>Form</SubType>
@@ -229,6 +236,9 @@
     <EmbeddedResource Include="frmChonKhachHang.resx">
       <DependentUpon>frmChonKhachHang.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmDangNhap.resx">
+      <DependentUpon>frmDangNhap.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmMayBay.resx">
       <DependentUpon>frmMayBay.cs</DependentUpon>
     </EmbeddedResource>
@@ -294,6 +304,8 @@
     <Content Include="map.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="Resources\plane.jpg" />
+    <None Include="Resources\eye-removebg-preview.png" />
     <None Include="Resources\mb11.png" />
     <None Include="Resources\pngaaa.com-791768.png" />
     <None Include="Resources\noun-backspace-8069349.png" />
