--- a/Airplace2025/Airplace2025.csproj
+++ b/Airplace2025/Airplace2025.csproj
@@ -108,6 +108,12 @@
     <Compile Include="FlightCard.Designer.cs">
       <DependentUpon>FlightCard.cs</DependentUpon>
     </Compile>
+    <Compile Include="FlightDetailForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FlightDetailForm.Designer.cs">
+      <DependentUpon>FlightDetailForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -229,6 +235,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FlightCard.resx">
       <DependentUpon>FlightCard.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FlightDetailForm.resx">
+      <DependentUpon>FlightDetailForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
