--- a/Airplace2025/Airplace2025.csproj
+++ b/Airplace2025/Airplace2025.csproj
@@ -132,6 +132,12 @@
     <Compile Include="frmAddAirplane.Designer.cs">
       <DependentUpon>frmAddAirplane.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmChiTietVe.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmChiTietVe.Designer.cs">
+      <DependentUpon>frmChiTietVe.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmChonChuyenBay.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -247,6 +253,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmAddAirplane.resx">
       <DependentUpon>frmAddAirplane.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmChiTietVe.resx">
+      <DependentUpon>frmChiTietVe.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmChonChuyenBay.resx">
       <DependentUpon>frmChonChuyenBay.cs</DependentUpon>
