Tái cấu trúc các form chọn chuyến bay và chi tiết vé bằng cách đổi tên và sắp xếp lại các component.
Đổi tên frmChonChuyenBay thành frmChonChuyenBayDi và cập nhật các tham chiếu liên quan.

Nâng cấp frmChiTietVe để xử lý thông tin hạng vé hiệu quả hơn, bao gồm thêm trình xử lý sự kiện mới cho việc chọn hạng vé.

Cải thiện frmShoppingCart (Giỏ hàng) để hiển thị chi tiết quyền lợi hạng vé và thông tin chuyến bay, cùng với các điều chỉnh UI để cải thiện trải nghiệm người dùng.

--- a/Airplace2025/Airplace2025.csproj
+++ b/Airplace2025/Airplace2025.csproj
@@ -138,11 +138,11 @@
     <Compile Include="frmChiTietVe.Designer.cs">
       <DependentUpon>frmChiTietVe.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmChonChuyenBay.cs">
+    <Compile Include="frmChonChuyenBayDi.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmChonChuyenBay.Designer.cs">
-      <DependentUpon>frmChonChuyenBay.cs</DependentUpon>
+    <Compile Include="frmChonChuyenBayDi.Designer.cs">
+      <DependentUpon>frmChonChuyenBayDi.cs</DependentUpon>
     </Compile>
     <Compile Include="frmChonKhachHang.cs">
       <SubType>Form</SubType>
@@ -236,6 +236,7 @@
     <Compile Include="Controls\StopControl.Designer.cs">
       <DependentUpon>StopControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="SelectedFareInfo.cs" />
     <Compile Include="State\PassengerSelectionState.cs" />
     <Compile Include="State\PassengerSelectionStateTemp.cs" />
     <None Include="Resources\sliders-solid-full.png" />
@@ -263,8 +264,8 @@
     <EmbeddedResource Include="frmChiTietVe.resx">
       <DependentUpon>frmChiTietVe.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmChonChuyenBay.resx">
-      <DependentUpon>frmChonChuyenBay.cs</DependentUpon>
+    <EmbeddedResource Include="frmChonChuyenBayDi.resx">
+      <DependentUpon>frmChonChuyenBayDi.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmChonKhachHang.resx">
       <DependentUpon>frmChonKhachHang.cs</DependentUpon>
