Fix formatting in Airplace2025.csproj by adjusting indentation for frmCaiDat.Designer.cs entry.

--- a/Airplace2025/Airplace2025.csproj
+++ b/Airplace2025/Airplace2025.csproj
@@ -136,8 +136,9 @@
     <Compile Include="frmCaiDat.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmCaiDat.Designer.cs">
-      <DependentUpon>frmCaiDat.cs</DependentUpon>
+	<Compile Include="frmCaiDat.Designer.cs">
+		  <DependentUpon>frmCaiDat.cs</DependentUpon>
+	</Compile>
     <Compile Include="frmChiTietVe.cs">
       <SubType>Form</SubType>
     </Compile>
