--- a/Airplace2025/Airplace2025.csproj
+++ b/Airplace2025/Airplace2025.csproj
@@ -138,12 +138,17 @@
     </Compile>
     <Compile Include="frmCaiDat.Designer.cs">
       <DependentUpon>frmCaiDat.cs</DependentUpon>
-    </Compile>
-    <Compile Include="frmChonChuyenBay.cs">
+    <Compile Include="frmChiTietVe.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmChonChuyenBay.Designer.cs">
-      <DependentUpon>frmChonChuyenBay.cs</DependentUpon>
+    <Compile Include="frmChiTietVe.Designer.cs">
+      <DependentUpon>frmChiTietVe.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmChonChuyenBayDi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmChonChuyenBayDi.Designer.cs">
+      <DependentUpon>frmChonChuyenBayDi.cs</DependentUpon>
     </Compile>
     <Compile Include="frmChonKhachHang.cs">
       <SubType>Form</SubType>
@@ -174,6 +179,12 @@
     </Compile>
     <Compile Include="frmSeatSelection.Designer.cs">
       <DependentUpon>frmSeatSelection.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmShoppingCart.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmShoppingCart.Designer.cs">
+      <DependentUpon>frmShoppingCart.cs</DependentUpon>
     </Compile>
     <Compile Include="frmSoLuongKhachHang.cs">
       <SubType>Form</SubType>
@@ -237,6 +248,7 @@
     <Compile Include="Controls\StopControl.Designer.cs">
       <DependentUpon>StopControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="SelectedFareInfo.cs" />
     <Compile Include="State\PassengerSelectionState.cs" />
     <Compile Include="State\PassengerSelectionStateTemp.cs" />
     <None Include="Resources\sliders-solid-full.png" />
@@ -264,8 +276,11 @@
     <EmbeddedResource Include="frmCaiDat.resx">
       <DependentUpon>frmCaiDat.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmChonChuyenBay.resx">
-      <DependentUpon>frmChonChuyenBay.cs</DependentUpon>
+    <EmbeddedResource Include="frmChiTietVe.resx">
+      <DependentUpon>frmChiTietVe.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmChonChuyenBayDi.resx">
+      <DependentUpon>frmChonChuyenBayDi.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmChonKhachHang.resx">
       <DependentUpon>frmChonKhachHang.cs</DependentUpon>
@@ -278,6 +293,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmPassengerDetails.resx">
       <DependentUpon>frmPassengerDetails.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmShoppingCart.resx">
+      <DependentUpon>frmShoppingCart.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmSoLuongKhachHang.resx">
       <DependentUpon>frmSoLuongKhachHang.cs</DependentUpon>
