Thêm frmPriceDetails và tích hợp vào frmShoppingCart
Bản cập nhật này giới thiệu một biểu mẫu (form) mới, frmPriceDetails, và tích hợp nó vào frmShoppingCart. Một liên kết đã được thêm vào để cho phép người dùng xem thông tin chi tiết về giá cả, giúp nâng cao trải nghiệm người dùng. Ngoài ra, tệp dự án cũng đã được cập nhật để bao gồm biểu mẫu mới và các tài nguyên liên quan.

--- a/Airplace2025/Airplace2025.csproj
+++ b/Airplace2025/Airplace2025.csproj
@@ -181,6 +181,12 @@
     <Compile Include="frmPassengerDetails.Designer.cs">
       <DependentUpon>frmPassengerDetails.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmPriceDetails.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmPriceDetails.Designer.cs">
+      <DependentUpon>frmPriceDetails.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmSeatSelection.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -303,6 +309,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmPassengerDetails.resx">
       <DependentUpon>frmPassengerDetails.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmPriceDetails.resx">
+      <DependentUpon>frmPriceDetails.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmShoppingCart.resx">
       <DependentUpon>frmShoppingCart.cs</DependentUpon>
