Thêm lớp Session để lưu trữ thông tin người dùng đăng nhập và cập nhật phương thức CreateVe trong DatVeDAO để lấy mã nhân viên từ Session nếu có. Cập nhật frmDangNhap để lưu thông tin người dùng vào Session khi đăng nhập thành công.

--- a/Airplace2025/Airplace2025.csproj
+++ b/Airplace2025/Airplace2025.csproj
@@ -260,6 +260,7 @@
       <DependentUpon>StopControl.cs</DependentUpon>
     </Compile>
     <Compile Include="SelectedFareInfo.cs" />
+    <Compile Include="Session.cs" />
     <Compile Include="State\PassengerSelectionState.cs" />
     <Compile Include="State\PassengerSelectionStateTemp.cs" />
     <None Include="Resources\sliders-solid-full.png" />
