Thêm tính năng chọn ghế cho hành khách trong frmCustomerInfo và cập nhật logic xử lý đặt vé. Cập nhật frmShoppingCart để truyền thông tin chuyến bay vào frmCustomerInfo. Cải thiện phương thức tạo chi tiết đặt vé trong DatVeBLL và thêm phương thức lấy danh sách ghế đã đặt trong DatVeDAO.

--- a/Airplace2025/Airplace2025.csproj
+++ b/Airplace2025/Airplace2025.csproj
@@ -161,6 +161,12 @@
     <Compile Include="frmChonChuyenBayVe.Designer.cs">
       <DependentUpon>frmChonChuyenBayVe.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmChonGhe.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmChonGhe.Designer.cs">
+      <DependentUpon>frmChonGhe.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmChonKhachHang.cs">
       <SubType>Form</SubType>
     </Compile>
