--- a/Airplace2025/packages.config
+++ b/Airplace2025/packages.config
@@ -1,5 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EPPlus" version="8.2.1" targetFramework="net472" />
+  <package id="EPPlus.Interfaces" version="8.1.0" targetFramework="net472" />
   <package id="Guna.UI2.WinForms" version="2.0.4.7" targetFramework="net472" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="3.0.1" targetFramework="net472" />
   <package id="Microsoft.Web.WebView2" version="1.0.3537.50" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Xml" version="8.0.2" targetFramework="net472" />
 </packages>
