--- a/Airplace2025/Airplace2025.csproj
+++ b/Airplace2025/Airplace2025.csproj
@@ -315,6 +315,12 @@
     <Compile Include="frmTrangChu.Designer.cs">
       <DependentUpon>frmTrangChu.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmUserMenu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmUserMenu.Designer.cs">
+      <DependentUpon>frmUserMenu.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controls\StopControl.cs">
@@ -347,6 +353,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmTraCuuDatVe.resx">
       <DependentUpon>frmTraCuuDatVe.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmUserMenu.resx">
+      <DependentUpon>frmUserMenu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmXemDanhSach.resx">
       <DependentUpon>frmXemDanhSach.cs</DependentUpon>
